--- a/WEB/Telescope SololearnPromo/index.html
+++ b/WEB/Telescope SololearnPromo/index.html
@@ -15,6 +15,7 @@
 <html>
    <head>
       <link href="https://fonts.googleapis.com/css?family=Turret+Road&display=swap" rel="stylesheet">
+      <link rel="stylesheet" type="text/css" href="telescope.css">
    </head>
    <body>
       <div class="virat">
