--- a/WEB/Fireworks color animation/index.html
+++ b/WEB/Fireworks color animation/index.html
@@ -5,6 +5,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Fireworks color animation</title>
+    <style>
+        
+    body{
+  background:#000;
+  margin:0;
+  width:100%;
+  overflow:hidden;
+}
+    </style>
 </head>
 <body>
     
